# entropy-in-economic-modeling

./: .gitignore  Cargo.toml  README.md  chapter-1.md  chapter-2.md  compose-dev.yaml  expose.md  refs.yml
.docker/: config.json
docs/: Expose.md  Grundlagen.md  main.bib
docs/Expose/: Expose.md
docs/Präsentation-2/: Präsentation-2.key
docs/assets/: application structure.drawio
docs/models/: chapter.md
docs/src/: Expose.aux  Expose.bbl  Expose.blg  Expose.tex  main.bib  main.tex
docs/theoretical-basics/: chapter.md  presentation.key  presentation.md
docs/theoretical-basics/export/: index.html
english/: main.typ  refs.yml  template.typ
german/: main.typ  template.typ
src/: main.rs  simulation.rs  utils.rs
