[package]
name = "sia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.13.1", features = ["rayon"] }
ndarray = "0.15.6"
ordered-float = "3.4.0"
petgraph = "0.6.2"
rayon = "1.5"
