[package]
name = "sia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
hashbrown = { version = "0.13.1", features = ["rayon"] }
itertools = "0.10.5"
ndarray = "0.15.6"
ordered-float = "3.4.0"
petgraph = "0.6.2"
rayon = "1.5"
